# Cylinders

./: .gitignore  README.md  freeze.txt  lock.txt  my_tests_psql.py  pyproject.toml  requirements.txt
cylinders/: __main__.py  config.py  main.py
cylinders/analytics/: count_gas.py  cylinders_count.py  diff_cylinders_count.py
cylinders/export_data/: __init__.py  export_from_pg_to_sqlite.py  export_sqlite_in_pg.py
cylinders/models/: __init__.py  batch_model.py  cylinders_model.py
cylinders/models/batch/: __init__.py  batch_base.py  batch_psql.py  batch_sqlite.py
cylinders/models/cylinders/: __init__.py  cylinders_base.py  cylinders_psql.py  cylinders_sqlite.py
cylinders/services/: batch_info.py  db_connection.py  remove_bathcs.py  rzn_sender.py
cylinders/windows/: __init__.py  batch_ui.py  batch_ui_old.py  batch_window.py  batch_window.ui  update_window.bat
icons/: icon.xcf
migrations/: add_column_passport_no.py  add_column_volumes_order.py  add_column_volumes_show.py  change_volumes_numeric.py  common.py  load_volumes.py  volumes-2024-12.csv
templates/: Шаблон Этикетка.odt  Шаблон паспорта КГМ.odt  Шаблон титульного листа.odt  Шаблон этикетка А4.odt  Шаблон этикеток на всю серию.odt
