[project]
name = "cylinders"
version = "1.1.0"
authors = [
    {name = "Yuriy Chebyshev", email = "bomzheg@gmail.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "loguru",
    "pyside2",
    "psycopg2-binary",
    "relatorio",
    "python-dotenv",
    "selenium",
    "webdriver_manager",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cylinders"]
